--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        
+
     </header>
 
     <!--This is nav bar-->
@@ -98,6 +98,8 @@
     <div class="box">
 
     </div>
+
+    <input type="text" placeholder="Name">
 </body>
 
 </html>
