--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <h6>Hello ICET</h6>
     </div>
 
+    <div class="box1"></div>
+
+
     <!--main content-->
     <div>
         <p>Text fields allow users to enter text into a UI. They typically appear in forms and dialogs.</p>
@@ -82,6 +85,8 @@
         </ul>
     </div>
 
+
+
     <div class="box">
 
     </div>
@@ -90,6 +95,7 @@
 
     <button class="btn">Mawa Click
         Karanna</button>
+
 
     <div id="div1">
 
@@ -101,6 +107,16 @@
 
     <input type="text" placeholder="Name">
 
+    <br><br><br><br><br>
+
+    <button class="my-btn">Save Me</button>
+
+    <input type="text" name="" class="my-txt">
+
+    <p class="last-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus officiis assumenda quas laboriosam vero expedita similique accusantium asperiores ad recusandae, eaque ut sapiente doloribus sed, quam, adipisci suscipit amet cupiditate!</p>
+
+
+    <button>Hello</button>
     
 </body>
 
