--- a/index.html
+++ b/index.html
@@ -2,122 +2,225 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="this is demo">
-    <title>ICET Demo</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="this is demo">
+  <title>ICET Demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-    <header>
+  <header>
 
-    </header>
+  </header>
 
-    <!--This is nav bar-->
-    <div>
-        <h1>හාවා</h1>
-        <h2>Hello ICET</h2>
-        <h3>Hello ICET</h3>
-        <h4>Hello ICET</h4>
-        <h5>Hello ICET</h5>
-        <h6>Hello ICET</h6>
+  <!--This is nav bar-->
+  <div>
+    <h1>හාවා</h1>
+    <h2>Hello ICET</h2>
+    <h3>Hello ICET</h3>
+    <h4>Hello ICET</h4>
+    <h5>Hello ICET</h5>
+    <h6>Hello ICET</h6>
+  </div>
+
+  <div class="box1"></div>
+
+
+  <!--main content-->
+  <div>
+    <p>Text fields allow users to enter text into a UI. They typically appear in forms and dialogs.</p>
+
+    <button>Click US</button>
+    <input type="password">
+
+    <label for="male">Male</label>
+    <input type="radio" name="" id="male">
+
+    <label for="female">Female</label>
+    <input type="radio" name="" id="female">
+
+    <img src="assets/a.png" alt="this is a baby" width="20px">
+    <audio src="assets/file_example_MP3_700KB.mp3" controls></audio>
+    <video src="" controls></video>
+
+    <a href="https://docs.python.org/3/tutorial/">Go to python</a>
+
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63397.333699821735!2d79.89441627694708!3d6.729120196223118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae24616c169e7c3%3A0xd21e80c970651d56!2sPanadura!5e0!3m2!1sen!2slk!4v1680951005127!5m2!1sen!2slk"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <br><br>
+    <input type="text" placeholder="Enter your name"
+      style="border: 2px solid green; border-radius: 100px; padding: 7px;">
+
+  </div>
+
+  <!--footer content-->
+  <div>
+    <ul>
+      <li>Yasindu</li>
+      <li>Kamal</li>
+      <li>Pasindu</li>
+      <li>Randika</li>
+    </ul>
+
+    <ol>
+      <li>Yasindu</li>
+      <li>Kamal</li>
+      <li>Pasindu</li>
+      <li>Randika</li>
+    </ol>
+  </div>
+
+  <div>
+    <ul style="list-style: none;">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+
+
+
+  <div class="box">
+
+  </div>
+
+  <br>
+
+  <button class="btn">Mawa Click
+    Karanna</button>
+
+
+  <div id="div1">
+
+  </div>
+
+  <div class="box">
+
+  </div>
+
+  <input type="text" placeholder="Name">
+
+  <br><br><br><br><br>
+
+  <button class="my-btn">Save Me</button>
+
+  <input type="text" name="" class="my-txt">
+
+  <p class="last-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus officiis assumenda quas
+    laboriosam vero expedita similique accusantium asperiores ad recusandae, eaque ut sapiente doloribus sed, quam,
+    adipisci suscipit amet cupiditate!</p>
+
+
+  <button>Hello</button>
+
+  <button type="button" class="btn btn-success">Success</button>
+
+  <div class="card card-custom" style="width: 18rem; z-index: -1;">
+    <img src="assets/game.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
     </div>
+  </div>
 
-    <div class="box1"></div>
+  <br>
 
+  <div class="card" style="width: 18rem;">
+    <img src="assets/game.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+    </div>
+  </div>
 
-    <!--main content-->
-    <div>
-        <p>Text fields allow users to enter text into a UI. They typically appear in forms and dialogs.</p>
+  <br>
 
-        <button>Click US</button>
-        <input type="password">
+  <div class="card" style="width: 18rem;">
+    <img src="assets/game.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+    </div>
+  </div>
 
-        <label for="male">Male</label>
-        <input type="radio" name="" id="male">
+  <button onclick="print()" type="button" class="btn btn-primary">Yasindu's Button</button>
 
-        <label for="female">Female</label>
-        <input type="radio" name="" id="female">
+  <button type="button" class="btn btn-outline-primary">Primary</button>
 
-        <img src="assets/a.png" alt="this is a baby" width="20px">
-        <audio src="assets/file_example_MP3_700KB.mp3" controls></audio>
-        <video src="" controls></video>
+  <div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/game.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/game.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/game.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
 
-        <a href="https://docs.python.org/3/tutorial/">Go to python</a>
+  </div>
 
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63397.333699821735!2d79.89441627694708!3d6.729120196223118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae24616c169e7c3%3A0xd21e80c970651d56!2sPanadura!5e0!3m2!1sen!2slk!4v1680951005127!5m2!1sen!2slk"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <div class="box32"></div>
 
-        <br><br>
-        <input type="text" placeholder="Enter your name"
-            style="border: 2px solid green; border-radius: 100px; padding: 7px;">
+  <div>
+    <p class="my-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, itaque pariatur! Iusto, mollitia voluptatibus
+      dicta iste officiis, debitis minus dolorem fugit porro eos nam odio expedita quasi voluptates labore quia.</p>
+    <p>Quo impedit itaque debitis nemo quaerat quasi minima nesciunt! Voluptatum ipsum laudantium, iste reprehenderit
+      culpa aut nisi nobis doloremque rem. Fugiat eveniet quibusdam dolore dolores, voluptate veniam nemo esse
+      architecto!</p>
+    <p>Nemo et laborum maiores esse iste omnis cupiditate ducimus. In, libero suscipit consequatur repellendus dolore
+      numquam minima impedit laboriosam magni non commodi quod aspernatur sed sit tempore alias facere dicta!</p>
+    <p>Accusantium molestiae ea aspernatur vitae, esse velit sunt assumenda, omnis quis explicabo ipsum laboriosam aut.
+      Sed molestias libero sunt quis laudantium doloribus, illo aperiam! Saepe, ratione sint? Beatae, nemo quas!</p>
+  </div>
+
+  <div class="box43">
+    <div style="width: 50%; height: 50%; background-color: red;">
 
     </div>
+  </div>
 
-    <!--footer content-->
-    <div>
-        <ul>
-            <li>Yasindu</li>
-            <li>Kamal</li>
-            <li>Pasindu</li>
-            <li>Randika</li>
-        </ul>
+  <h1 id="result"></h1>
 
-        <ol>
-            <li>Yasindu</li>
-            <li>Kamal</li>
-            <li>Pasindu</li>
-            <li>Randika</li>
-        </ol>
-    </div>
+  <div>
+    <input id="email" type="text" placeholder="Enter your email">
+    <button onclick="getData()">Save Data</button>
+  </div>
 
-    <div>
-        <ul style="list-style: none;">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
+  <div>
+    <input id="num" type="text" placeholder="Enter A Number"><br>
+    <button>Genarate</button>
+  </div>
 
-
-
-    <div class="box">
-
-    </div>
-
-    <br>
-
-    <button class="btn">Mawa Click
-        Karanna</button>
-
-
-    <div id="div1">
-
-    </div>
-
-    <div class="box">
-
-    </div>
-
-    <input type="text" placeholder="Name">
-
-    <br><br><br><br><br>
-
-    <button class="my-btn">Save Me</button>
-
-    <input type="text" name="" class="my-txt">
-
-    <p class="last-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus officiis assumenda quas laboriosam vero expedita similique accusantium asperiores ad recusandae, eaque ut sapiente doloribus sed, quam, adipisci suscipit amet cupiditate!</p>
-
-
-    <button>Hello</button>
-    
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+    crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
